Refactor sensor discovery script and improve connectivity diagnostics
- Updated `discover_sensor_paths.py` to include a demo mode for testing without connecting to the AF Server.
- Enhanced error handling and logging in the sensor discovery process.
- Modified `init_db.py` and `test_phase2.py` to ensure UTF-8 encoding for Windows console output.
- Added a new script `test_af_connectivity.py` for diagnosing connectivity issues with the PI AF Server.
- Adjusted `requirements.txt` to specify compatible versions for `openpyxl` and added `pytz`.
- Updated `pyproject.toml` to simplify pytest options and ensure coverage reporting is handled separately.
- Introduced a demo JSON file `sensor_paths_buzios_demo.json` for testing purposes.
- Added Streamlit configuration file for future UI development.
- Improved database connection checks in `database.py` to use SQLAlchemy's text construct.
- Refactored sensor creation logic in `sensor_manager.py` to ensure proper session handling and ID retrieval.

--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,7 @@ prophet>=1.1.4
 requests>=2.31.0
 apscheduler>=3.11.0
 plotly>=5.14.0
-openpyxl>=3.10.0
+openpyxl>=3.0.0
 reportlab>=4.0.0
 python-dotenv>=1.0.0
+pytz
