--- a/pyproject.toml
+++ b/pyproject.toml
@@ -97,7 +97,7 @@ ensure_newline_before_comments = true
 [tool.pytest.ini_options]
 testpaths = ["tests"]
 python_files = ["test_*.py"]
-addopts = "-v --cov=src --cov-report=html"
+addopts = "-v"
 
 [tool.coverage.run]
 source = ["src"]
