--- a/.streamlit/config.toml
+++ b/.streamlit/config.toml
@@ -7,8 +7,8 @@ serverAddress = "localhost"
 [server]
 port = 8501
 headless = true
-enableCORS = false
+enableCORS = true
+enableXsrfProtection = false
 
-[telemetry]
-enabled = false
-optedOutCollectionDisabled = true
+[logger]
+level = "info"
